--- a/cms-spa/app/components/main/main.html
+++ b/cms-spa/app/components/main/main.html
@@ -8,5 +8,6 @@
     <div class="text-container">
         <h3>Angular ES6 Webpack Application</h3>
         <p>With a little help from <a href="https://yeoman.io">Yeoman</a></p>
+        <pre>{{ mainCtrl.todos | json }}</pre>
     </div>
 </section>
